added pagination and search on manage camps page and fixed available camp pagination on search

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CareCamps</title>
   </head>
-  <body class="font-roboto bg-gray-50 max-w-screen-2xl mx-auto">
+  <body class="font-roboto bg-gray-50 max-w-screen-2xl mx-auto min-h-[100vh]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
